--- a/Map.html
+++ b/Map.html
@@ -35,6 +35,6 @@
     <a href="index.html">
         <h1 class="Logo">Lokismp</h1>
     </a>
-    <iframe src="http://85.202.160.233:2298"></iframe>
+    <iframe src="https://quarto.org/"data-external="1"></iframe>
 </body>
 </html>
