--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <br>
     <a href="Join.html">How to Join</a>
     <br>
-    <a href="Map.html">View Server Map</a>
+    <a href="http://85.202.160.233:2298">View Server Map</a>
     <br>
     <a href="rules.html">View Server Rules</a>
     <br>
